# p4-symbolic

./: .bazelrc  .gitmodules  BUILD  BUILD.bazel  Dockerfile  README.md  WORKSPACE  WORKSPACE.bazel  format.sh  p4c.bzl
.github/workflows/: ci-bmv2-test.yml  ci-format.yml  ci-test.yml
p4-samples/: BUILD.bazel  Makefile  veth_setup.sh
p4-samples/hardcoded/: Makefile
p4-samples/ipv4-routing/: .gitignore  Makefile  basic.p4  entries.pb.txt  entries.txt
p4-samples/port-table/: .gitignore  Makefile  entries.pb.txt  table.p4  table.pb.txt
p4-samples/reflector/: Makefile
p4-samples/vrf-routing/: .gitignore  entries.pb.txt  test.sh  vrf.p4
p4_symbolic/: BUILD.bazel  main.cc  parser.cc  parser.h
p4_symbolic/bmv2/: BUILD.bazel  bmv2.cc  bmv2.h  bmv2.proto  test.bzl  test.cc  test_sdiff.py
p4_symbolic/bmv2/expected/: basic.pb.txt  hardcoded.pb.txt  reflector.pb.txt  table.pb.txt
p4_symbolic/ir/: BUILD.bazel  ir.cc  ir.h  ir.proto  pdpi_driver.cc  pdpi_driver.h  statements.proto  table_entries.cc  table_entries.h  test.bzl  test.cc  values.proto
p4_symbolic/ir/expected/: basic.pb.txt  basic.txt  hardcoded.pb.txt  hardcoded.txt  reflector.pb.txt  reflector.txt  table.pb.txt  table.txt
p4_symbolic/symbolic/: BUILD.bazel  action.cc  action.h  bits.cc  bits.h  conditional.cc  conditional.h  control.cc  control.h  guarded_map.cc  guarded_map.h  headers.cc  headers.h  names.cc  names.h  operators.cc  operators.h  packet.cc  packet.h  parser.cc  parser.h  structs.h  symbolic.cc  symbolic.h  table.cc  table.h  test.bzl  typed.cc  typed.h  util.cc  util.h  values.cc  values.h
p4_symbolic/symbolic/expected/: basic.smt2  basic.txt  hardcoded.smt2  hardcoded.txt  reflector.smt2  reflector.txt  table.smt2  table.txt
p4_symbolic/util/: BUILD.bazel  io.cc  io.h  status.cc  status.h
samples/: Makefile  veth_setup.sh
samples/hardcoded/: Makefile  README.md  hardcoded.p4
samples/ipv4-routing/: .gitignore  Makefile  README.md
samples/port-table/: Makefile  README.md
samples/reflector/: Makefile  README.md
src/: BUILD  main.cc
src/bmv2/: BUILD.bazel  bmv2.proto  test.bzl  test.cc
src/bmv2/expected/: table.pb.txt
src/protobuf/: BUILD  Makefile  client.cc  test.proto
src/protobuf/bmv2/: BUILD  header.proto  parser.proto  primitives.proto  program.proto  table.proto
test/: BUILD  bmv2_parsing_check.bzl  sdiff.py
test/expected/: basic.pb.txt  hardcoded.pb.txt  reflector.pb.txt  table.pb.txt
test/output/: hardcoded.p4c.json  hardcoded.protobuf.json  reflector.p4c.json  reflector.protobuf.json  table.protobuf.json
test/samples/: Makefile  README.md
test/samples/hardcoded/: Makefile
test/samples/ipv4-routing/: Makefile
test/samples/port-table/: Makefile
test/samples/reflector/: Makefile
testing/: BUILD  bmv2_parsing_check.bzl  sdiff.py
testing/output/: basic.protobuf.json  table.p4c.json  table.protobuf.json
testing/samples/ipv4-routing/: Makefile
testing/samples/port-table/: Makefile  table.p4
testing/samples/reflector/: reflector.p4
testing/testdata/: basic.json
z3-samples/paths/: paths.opt1.smt2  paths.opt2.smt2  paths.p4  paths.p4rt
z3-samples/port-table/: sample.smt2
