# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@rules_foreign_cc//tools/build_defs:configure.bzl", "configure_make")

# Bazel buildifier: auto formats bazel files.
buildifier(
    name = "buildifier",
    exclude_patterns = ["./third_party/**"],
    lint_mode = "fix",
)

# Compiling z3 using foreign_cc toolchain (configure and make).
configure_make(
    name = "z3",
    binaries = ["z3"],
    # Bazel redacts certain cc macros such as __DATA__ and __TIMESTAMP__
    # since they will cause the compiled code to have timestamps or other
    # similar information in it, causing the compilation to be
    # non-deterministic.
    # Without such redaction, running the compilation twice with no changes in
    # the code will produce seemingly different binaries.
    # Bazel fixes this by setting the value of these macros to "redacted",
    # which is a valid c++ expression through CFLAGS and CXXFLAGS Toolchain
    # options.
    # See https://github.com/bazelbuild/bazel/issues/5750
    # However, the quotes get dropped because of some bash serialization in
    # rules_foreign_cc when they are passed (as bash environment variables) to
    # "./configure", causing __DATA__ to resolve to the unquoted token redacted,
    # which is usually not a valid c++ expression.
    # This fixes that, it makes redacted (the token not the string) an alias to
    # 0, which is a valid c++ expression.
    # This is a minor improvement on top of:
    # https://github.com/bazelbuild/rules_foreign_cc/issues/239
    configure_env_vars = {
        "CFLAGS": "-Dredacted=0",
        "CXXFLAGS": "-Dredacted=0",
    },
    configure_in_place = True,
    lib_source = "@z3//:all",
    make_commands = [
        "cd build",
        "make -j2",  # Use -j2, hardcoded but otherwise it will be too slow.
        "make install",
    ],
    shared_libraries = ["libz3.so"],
    visibility = ["//visibility:public"],
)
