# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//p4_symbolic/bmv2:test.bzl", "bmv2_protobuf_parsing_test")

# Rules for building protobuf.
cc_proto_library(
    name = "bmv2_cc_proto",
    visibility = ["//p4_symbolic:__subpackages__"],
    deps = [":bmv2_proto"],
)

proto_library(
    name = "bmv2_proto",
    srcs = [
        "bmv2.proto",
    ],
    visibility = ["//p4_symbolic:__subpackages__"],
    deps = [
        "@com_google_protobuf//:struct_proto",
    ],
)

# Rules for building test.cc binary.
cc_binary(
    name = "test",
    srcs = ["test.cc"],
    deps = [":bmv2_cc_proto"],
)

# Test rules: one per program in //p4-samples
bmv2_protobuf_parsing_test(
    name = "port_table",
    golden_file = "expected/table.pb.txt",
    p4_program = "//p4-samples:port-table/table.p4",
)

bmv2_protobuf_parsing_test(
    name = "ipv4_routing",
    golden_file = "expected/basic.pb.txt",
    p4_program = "//p4-samples:ipv4-routing/basic.p4",
)

bmv2_protobuf_parsing_test(
    name = "port_hardcoded",
    golden_file = "expected/hardcoded.pb.txt",
    p4_program = "//p4-samples:hardcoded/hardcoded.p4",
)

bmv2_protobuf_parsing_test(
    name = "reflector",
    golden_file = "expected/reflector.pb.txt",
    p4_program = "//p4-samples:reflector/reflector.p4",
)
