# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This file contains build rules for bmv2 json protobuf
# definition and their test files.

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

cc_proto_library(
    name = "ir_cc_proto",
    visibility = ["//p4_symbolic:__subpackages__"],
    deps = [":ir_proto"],
)

proto_library(
    name = "ir_proto",
    srcs = [
        "ir.proto",
        "statements.proto",
        "values.proto",
    ],
    deps = [
        "//p4_symbolic/bmv2:bmv2_proto",
        "@p4_pdpi//p4_pdpi:ir_proto",
    ],
)
