# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "symbolic",
    srcs = [
        "action.cc",
        "names.cc",
        "symbolic.cc",
        "table.cc",
    ],
    hdrs = [
        "action.h",
        "names.h",
        "structs.h",
        "symbolic.h",
        "table.h",
    ],
    visibility = ["//p4_symbolic:__subpackages__"],
    deps = [
        "//p4_symbolic/ir:ir_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf_headers",
        "@p4_pdpi//p4_pdpi/utils:status_utils",
    ],
)
